fixed grid layout issues

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -131,7 +131,7 @@ img {
     left: 0;
     right: 0;
     color: white;
-    text-shadow: 3px 2px 3px black;
+    /* text-shadow: 3px 2px 3px white; */
     font-family: monospace;
     font-weight: lighter;
     font-size: 25px;
